<resources>
    <string name="app_name">MyMovie</string>
    <string name="app_description">Aplicación de my movies</string>

    <string name="register">Registrarse</string>
    <string name="register_name">Nombre completo:</string>
    <string name="register_password">Contraseña:</string>
    <string name="register_username">Nombre de usuario:</string>
    <string name="register_repassword">Repita contraseña:</string>
    <string name="register_tooltip_name">Nombre completo</string>
    <string name="register_tooltip_username">Nombre de usuario</string>
    <string name="register_tooltip_password">Contraseña</string>
    <string name="register_tooltip_repassword">Re-contraseña</string>
    <string name="register_validation_empty_fields">Faltan campos por rellenar</string>
    <string name="register_validation_wrong_passwords">Las contraseñas no coinciden</string>
    <string name="register_go_login">Ya tengo cuenta, identificarme.</string>
    <string name="login_error">Credenciales incorrectas</string>
    <string name="register_user_exists">Ya existe un usuario con ese nick. Por favor, pruebe otro</string>
    <string name="register_error">Error en el proceso de registro. Pruebe en unos minutos</string>

    <string name="login">Identificarse</string>
    <string name="login_password">Contraseña:</string>
    <string name="login_tooltip_username">Nombre de usuario</string>
    <string name="login_username">Nombre de usuario:</string>
    <string name="login_go_register">Aún no tengo cuenta, registrarme.</string>


    <string name="latest_title">Novedades</string>
    <string name="favourites_title">Favoritas</string>
    <string name="film_vote_count">Votos</string>
    <string name="film_vote_rate">Valoración</string>
    <string name="film_seen">Vista</string>
    <string name="film_fav">Favorita</string>
    <string name="film_image">Imagen de la película</string>

    <string name="logout">Salir de sesión</string>

</resources>