<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FilmDetailActivity"

    >

    <TextView
        android:id="@+id/txTitle"
        android:layout_width="370dp"
        android:layout_height="65dp"
        android:text="Mortal Kombat"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imgFilm"
        android:layout_width="221dp"
        android:layout_height="265dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/film_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txTitle"
        tools:srcCompat="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/txVoteCount"
        android:layout_width="106dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:text="Votos: 7172"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFilm"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txVoteRate"
        android:layout_width="114dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:text="Valoracion: 8'9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFilm"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txOverview"
        android:layout_width="366dp"
        android:layout_height="172dp"
        android:layout_marginTop="5dp"
        android:text="sfasfasfasdfasdfsadfasfdasfasfasfdasfafafa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txVoteRate"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_fav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/swSeen"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txOverview"
        app:layout_constraintVertical_bias="0.196"
        tools:ignore="HardcodedText"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swSeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_seen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txOverview"
        app:layout_constraintVertical_bias="0.195" />

</androidx.constraintlayout.widget.ConstraintLayout>